hw2 in progress

--- a/hw_2/hw2_3.ipynb
+++ b/hw_2/hw2_3.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +77,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = TicTacToe(3, 3, 3)\n",
-    "agent1 = QleaningAgent(env)\n",
-    "agent2 = MinMaxAgent(env)"
+    "mtcs_agent = MCTSAgent(num_rounds=1000)\n",
+    "random.seed(1000)\n",
+    "counter = TikTakCounter()\n",
+    "env = TicTacToe(4, 4, 3)\n",
+    "for i in range(100_000):\n",
+    "    env.reset()\n",
+    "    play_game(mtcs_agent, env, counter)\n",
+    "    if i % 10 == 0:\n",
+    "        print(counter)"
    ]
   },
   {
