--- a/hw_2/hw2_2.ipynb
+++ b/hw_2/hw2_2.ipynb
@@ -731,6 +731,13 @@
       ]
     },
     {
+      "source": [
+        "DoubleDQN"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -861,9 +868,7 @@
       "metadata": {
         "id": "deGfSMrn5PQ2"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
